deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: seddaoudi/new_docedit:staging-7fc9d28-17_docedit:staging-7fc9d28-17_docedit:latest
        ports:
        - containerPort: 8080
