ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: 3.218.15.164
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
